// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Subgenerator server of quarkus JHipster blueprint With maven MongoDb matches snapshot 1`] = `
{
  ".editorconfig": {
    "stateCleared": "modified",
  },
  ".gitattributes": {
    "stateCleared": "modified",
  },
  ".gitignore": {
    "stateCleared": "modified",
  },
  ".husky/pre-commit": {
    "stateCleared": "modified",
  },
  ".lintstagedrc.js": {
    "stateCleared": "modified",
  },
  ".mvn/wrapper/MavenWrapperDownloader.java": {
    "stateCleared": "modified",
  },
  ".mvn/wrapper/maven-wrapper.jar": {
    "stateCleared": "modified",
  },
  ".mvn/wrapper/maven-wrapper.properties": {
    "stateCleared": "modified",
  },
  ".prettierignore": {
    "stateCleared": "modified",
  },
  ".prettierrc": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "README.md": {
    "stateCleared": "modified",
  },
  "checkstyle.xml": {
    "stateCleared": "modified",
  },
  "mvnw": {
    "stateCleared": "modified",
  },
  "mvnw.cmd": {
    "stateCleared": "modified",
  },
  "npmw": {
    "stateCleared": "modified",
  },
  "npmw.cmd": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "pom.xml": {
    "stateCleared": "modified",
  },
  "sonar-project.properties": {
    "stateCleared": "modified",
  },
  "src/main/docker/Dockerfile.jvm": {
    "stateCleared": "modified",
  },
  "src/main/docker/Dockerfile.legacy-jar": {
    "stateCleared": "modified",
  },
  "src/main/docker/Dockerfile.native": {
    "stateCleared": "modified",
  },
  "src/main/docker/app.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/JVM.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/dashboard.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/datasources/datasource.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jhipster-control-center.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/mongodb-cluster.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/mongodb.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/mongodb/MongoDB.Dockerfile": {
    "stateCleared": "modified",
  },
  "src/main/docker/mongodb/scripts/init_replicaset.js": {
    "stateCleared": "modified",
  },
  "src/main/docker/monitoring.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/Constants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JHipsterProperties.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JsonbConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/LocalDateProvider.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/MongockConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/dbmigrations/InitialSetupMigration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Authority.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/User.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/AuthoritiesConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/BCryptPasswordHasher.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/RandomUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/UserNotActivatedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/UsernameNotFoundException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/jwt/TokenProvider.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/AuthenticationService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/EmailAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/IdGenerator.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/InvalidPasswordException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/MailService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/ManagementInfoService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/StringIdGenerator.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/UserService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/UsernameAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/ManagementInfoDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/PasswordChangeDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/UserDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/mapper/UserMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/AccountResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/AuthorityResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/JHipsterConfigurationEndpoint.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/JHipsterLoggersEndpoint.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/JHipsterMetricsEndpoint.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/ManagementInfoResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/SpaFilter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/UserJWTController.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/UserResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/BadRequestAlertException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ConstraintViolationExceptionMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/EmailAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/EmailNotFoundException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ErrorConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/FieldErrorVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/InvalidPasswordWebException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/LoginAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/ConfigPropsVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/EnvVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/KeyAndPasswordVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/LoggerVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/LoginVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/ManagedUserVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/util/HeaderUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/util/ResponseUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/META-INF/resources/publicKey.pem": {
    "stateCleared": "modified",
  },
  "src/main/resources/application.properties": {
    "stateCleared": "modified",
  },
  "src/main/resources/default_banner.txt": {
    "stateCleared": "modified",
  },
  "src/main/resources/i18n/messages_de.properties": {
    "stateCleared": "modified",
  },
  "src/main/resources/i18n/messages_en.properties": {
    "stateCleared": "modified",
  },
  "src/main/resources/i18n/messages_fr.properties": {
    "stateCleared": "modified",
  },
  "src/main/resources/jwt/privateKey.pem": {
    "stateCleared": "modified",
  },
  "src/main/resources/reflect-config-mongo.json": {
    "stateCleared": "modified",
  },
  "src/main/resources/resources-config.json": {
    "stateCleared": "modified",
  },
  "src/main/resources/templates/mail/activationEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/templates/mail/creationEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/templates/mail/passwordResetEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/activate.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/configuration.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/error.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/global.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/health.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/home.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/login.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/logs.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/metrics.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/password.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/register.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/reset.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/sessions.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/settings.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/user-management.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/activate.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/configuration.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/error.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/global.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/health.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/home.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/login.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/logs.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/metrics.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/password.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/register.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/reset.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/sessions.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/settings.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/user-management.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/activate.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/configuration.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/error.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/global.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/health.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/home.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/login.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/logs.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/metrics.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/password.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/register.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/reset.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/sessions.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/settings.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/user-management.json": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/ArchTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/TestUtil.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/builder/UserBuilder.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/LocalDateProviderTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/mock/JHipsterPropertiesMock.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuthorityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/UserTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/infrastructure/EmailServerResource.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/infrastructure/InjectMailServer.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/MailServiceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/mapper/UserMapperTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/utility/IntegrationTestBase.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AccountResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AccountResourceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AuthorityResourceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/ManagementInfoResourceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/UserJWTControllerTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/UserResourceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/resources/i18n/messages_de.properties": {
    "stateCleared": "modified",
  },
  "src/test/resources/i18n/messages_en.properties": {
    "stateCleared": "modified",
  },
  "src/test/resources/i18n/messages_fr.properties": {
    "stateCleared": "modified",
  },
}
`;

exports[`Subgenerator server of quarkus JHipster blueprint With monolith Maven Mysql matches snapshot 1`] = `
{
  ".editorconfig": {
    "stateCleared": "modified",
  },
  ".gitattributes": {
    "stateCleared": "modified",
  },
  ".gitignore": {
    "stateCleared": "modified",
  },
  ".husky/pre-commit": {
    "stateCleared": "modified",
  },
  ".lintstagedrc.js": {
    "stateCleared": "modified",
  },
  ".mvn/wrapper/MavenWrapperDownloader.java": {
    "stateCleared": "modified",
  },
  ".mvn/wrapper/maven-wrapper.jar": {
    "stateCleared": "modified",
  },
  ".mvn/wrapper/maven-wrapper.properties": {
    "stateCleared": "modified",
  },
  ".prettierignore": {
    "stateCleared": "modified",
  },
  ".prettierrc": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "README.md": {
    "stateCleared": "modified",
  },
  "checkstyle.xml": {
    "stateCleared": "modified",
  },
  "mvnw": {
    "stateCleared": "modified",
  },
  "mvnw.cmd": {
    "stateCleared": "modified",
  },
  "npmw": {
    "stateCleared": "modified",
  },
  "npmw.cmd": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "pom.xml": {
    "stateCleared": "modified",
  },
  "sonar-project.properties": {
    "stateCleared": "modified",
  },
  "src/main/docker/Dockerfile.jvm": {
    "stateCleared": "modified",
  },
  "src/main/docker/Dockerfile.legacy-jar": {
    "stateCleared": "modified",
  },
  "src/main/docker/Dockerfile.native": {
    "stateCleared": "modified",
  },
  "src/main/docker/app.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/JVM.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/dashboard.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/datasources/datasource.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jhipster-control-center.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/monitoring.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/mysql.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/Constants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JHipsterProperties.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JsonbConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/LocalDateProvider.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/hibernate/JHipsterCompatibleImplicitNamingStrategy.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/hibernate/JHipsterCompatiblePhysicalNamingStrategy.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Authority.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/User.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/AuthoritiesConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/BCryptPasswordHasher.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/RandomUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/UserNotActivatedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/UsernameNotFoundException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/jwt/TokenProvider.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/AuthenticationService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/EmailAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/InvalidPasswordException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/MailService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/ManagementInfoService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/UserService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/UsernameAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/ManagementInfoDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/PasswordChangeDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/UserDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/mapper/UserMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/AccountResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/AuthorityResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/JHipsterConfigurationEndpoint.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/JHipsterLoggersEndpoint.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/JHipsterMetricsEndpoint.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/ManagementInfoResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/SpaFilter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/UserJWTController.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/UserResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/BadRequestAlertException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ConstraintViolationExceptionMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/EmailAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/EmailNotFoundException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ErrorConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/FieldErrorVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/InvalidPasswordWebException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/LoginAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/ConfigPropsVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/EnvVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/KeyAndPasswordVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/LoggerVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/LoginVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/ManagedUserVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/util/HeaderUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/util/ResponseUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/META-INF/resources/publicKey.pem": {
    "stateCleared": "modified",
  },
  "src/main/resources/application.properties": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/changelog/00000000000000_initial_schema.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/data/authority.csv": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/data/user.csv": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/data/user_authority.csv": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/master.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/default_banner.txt": {
    "stateCleared": "modified",
  },
  "src/main/resources/i18n/messages_de.properties": {
    "stateCleared": "modified",
  },
  "src/main/resources/i18n/messages_en.properties": {
    "stateCleared": "modified",
  },
  "src/main/resources/i18n/messages_fr.properties": {
    "stateCleared": "modified",
  },
  "src/main/resources/jwt/privateKey.pem": {
    "stateCleared": "modified",
  },
  "src/main/resources/resources-config.json": {
    "stateCleared": "modified",
  },
  "src/main/resources/templates/mail/activationEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/templates/mail/creationEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/templates/mail/passwordResetEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/activate.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/configuration.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/error.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/global.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/health.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/home.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/login.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/logs.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/metrics.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/password.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/register.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/reset.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/sessions.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/settings.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/de/user-management.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/activate.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/configuration.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/error.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/global.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/health.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/home.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/login.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/logs.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/metrics.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/password.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/register.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/reset.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/sessions.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/settings.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/user-management.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/activate.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/configuration.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/error.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/global.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/health.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/home.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/login.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/logs.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/metrics.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/password.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/register.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/reset.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/sessions.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/settings.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/fr/user-management.json": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/ArchTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/TestUtil.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/builder/UserBuilder.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/LocalDateProviderTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/mock/JHipsterPropertiesMock.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuthorityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/UserTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/infrastructure/EmailServerResource.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/infrastructure/InjectMailServer.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/MailServiceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/mapper/UserMapperTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/utility/IntegrationTestBase.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AccountResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AccountResourceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AuthorityResourceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/ManagementInfoResourceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/UserJWTControllerTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/UserResourceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/resources/i18n/messages_de.properties": {
    "stateCleared": "modified",
  },
  "src/test/resources/i18n/messages_en.properties": {
    "stateCleared": "modified",
  },
  "src/test/resources/i18n/messages_fr.properties": {
    "stateCleared": "modified",
  },
}
`;
